LA-337 Fix for front page 4 columns wrapping to the next line

--- a/docroot/profiles/labp/themes/la/lasbptheme/sass/components/_four_column_cta.scss
+++ b/docroot/profiles/labp/themes/la/lasbptheme/sass/components/_four_column_cta.scss
@@ -69,6 +69,7 @@
 .four-col-wrapper {
   $zen-column-count: 4;
   @include zen-grid-container;
+
   margin: auto;
   max-width: $max-site-width;
   @include wrapper(90%);
@@ -84,6 +85,7 @@
       @include zen-grid-flow-item(1, 4, false, true);
       @include zen-float(left);
       margin-top: 0;
+      margin-right: 0;
     }
   }
 }
